fix favourite name in the card, too short

--- a/src/app/beer-plp/beers-favourites/beer-favourite-item/beer-favourite-item.component.scss
+++ b/src/app/beer-plp/beers-favourites/beer-favourite-item/beer-favourite-item.component.scss
@@ -18,7 +18,7 @@
   }
 
   .favourite-items__name {
-    max-width: 9rem;
+    max-width: 10rem;
     max-height: 2rem;
     overflow: hidden;
     display: -webkit-box;
